fix: fix block helper centering on small size screens

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -715,7 +715,7 @@ h5{
       }
       @include size-small{
         gap: 30px 30px;
-        justify-content: start;
+        //justify-content: start;
       }
 
       .list-item{
